--- a/index.css
+++ b/index.css
@@ -6,89 +6,66 @@ body
 	font-family:"Tahoma", Geneva, sans-serif;
 
 }
-ul 
-{
-  position: fixed;
-  top: 0;
-  width: 100%;
-  list-style-type: none;
-  margin: 0;
-  padding:0;
-  overflow:hidden;
-  background-color:#999999;
+
+.left {
+    float:left;
 }
-li
-{
-  float:left;
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    padding-left: 50px;
+    margin: 0px;
 }
-li a 
-{
-  font-size:14px;
-  text-decoration:none;
-  display: block;
-  color:black;
-  text-align:center;
-  padding: 10px;
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    color: #f2f2f2;
+    text-align: center;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-right:30px; 
+    padding-left:30px;
+    height: 40px;
+    text-decoration: none;
+    font-size: 30px;
+}/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
 }
-li a:hover
-{
-	background-color: #888888;
-	color:black;
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
 }
-li a:active
-{
-	background-color: #000000;
-	color:white;
-}
-#temperature
-{
-	font-size:36px;
-	float:left;
-}
-.current
-{
-	background-color:#92e0f7; 
-}
-.tile
-{
-	margin-top: 34px;
-	float:left;
-	width:33.33333333%;
-	height:calc(100vh - 34px);;
-	position:relative;
-	background-color: #92e0f7;
+
+.ptsans{
+    font-family: 'PT Sans', sans-serif;
 }
 .header
 {
-	padding-top: 20px;
 	font-size: 100px;
 }
-.innercontent
-{
-	position:absolute;
-	left:10px;
-	right:10px;
-	top:10px;
-	bottom:10px;
 
-}
-.innercontent img
-{
-	max-height:80%;
-	width:auto;
-	float:left;
-}
-.wrapper
-{
-	overflow:hidden;
-	margin:	0px;
-}
 h1
 {
 	text-align: center;
 }
 
-section
-{
-	max-width: 40%;
+section img{
+	left: 20px;
+	padding: 20px;
+}
+
+section p{
+	padding: 20px;
+	left: 20px;
+}
+
+.weatherInfo {
+	padding: 20px;
+	margin: 20px;
+	left: 20px;
+	right: 20px;
 }
